# vulkan

./: .clang-format  .emacs  CMakeLists.txt
.cache/clangd/index/: application.cpp.7EB08998303469F4.idx  application.hpp.AA3FCE0EBBB98262.idx  main.cpp.12C6CED80D5EA495.idx  sdlException.cpp.C2E9F06F2711153A.idx  sdlException.hpp.55A32B66C3D11BC9.idx
implement/: appImplement.cpp  initVulkan.cpp
include/: application.cppm  application.hpp  internal.cppm  sdlException.hpp  validationLayers.cppm
interface/: appInterface.cpp  appUtils.cpp
modules/: application.cpp  internal.cpp  validationLayers.cpp
shaders/: compile.sh  shader.slang  slang.spv
src/: application.cpp  initVulkan.cpp  main.cpp  sdlException.cpp
